# mines-cpp

./: .gitignore  CMakeLists.txt  main  main.cpp  makefile  vcpkg.json
.cache/clangd/index/: main.cpp.43D530A7F5B15289.idx
